# lua-json5

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh  taplo.toml
.cargo/: config.toml
src/: json5.pest  lib.rs  parser.rs  val.rs
